--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "~2.15.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-font-awesome": "^4.0.0-alpha.10",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "emberfire": "^2.0.8",
+    "loader.js": "^4.2.3",
+    "torii": "^0.9.6",
+    "torii-fire": "^0.2.3"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
