--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "ember-font-awesome": "^4.0.0-alpha.10",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
+    "ember-simple-auth": "^1.4.0",
+    "ember-simple-auth-firebase": "0.0.3",
     "ember-source": "~2.15.0",
     "ember-welcome-page": "^3.0.0",
     "emberfire": "^2.0.8",
